# Django_project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ruff.yml
hotel/hotel/: settings.py  urls.py
hotel/room/: admin.py  models.py  serializers.py  views.py
hotel/room/migrations/: 0001_initial.py  0002_category_room_cat.py  0003_room_user.py  0004_hotels_remove_room_cat_remove_room_user_room_types_and_more.py  0005_rooms.py  0006_guests.py  0007_alter_hotels_phone.py  0008_alter_room_types_max_guests_alter_rooms_floor.py  0009_alter_hotels_star_rating_bookings.py  0010_bookings_check_out_date_bookings_created_at_and_more.py
hotel/room/tests/: conftest.py  test_models.py  test_views.py
