[project]
name = "django-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Gleb",email = "plgleb0011@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0,<7.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-phonenumber-field[phonenumbers] (>=8.4.0,<9.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "pytest-factoryboy (>=2.8.1,<3.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "django-filter (>=25.2,<26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.14.8,<0.15.0)"
]
[tool.python]
include = ["hotel/**/*"]